--- a/themes/even/sass/_mobile.scss
+++ b/themes/even/sass/_mobile.scss
@@ -64,7 +64,7 @@
       transition: color 0.2s ease;
 
       &:hover {
-        color: $main-colour;
+        color: $link-hover-colour;
       }
     }
   }
