--- a/themes/even/sass/_toc.scss
+++ b/themes/even/sass/_toc.scss
@@ -7,8 +7,8 @@ $toc-max-sreen-width: 2 * 200px + $post-toc-margin-left !default;
   margin-left: $post-toc-margin-left;
   padding: 10px;
   border-radius: 5px;
-  background: hsla(45,46%,95%,.6);
-  box-shadow: 1px 1px 2px rgba(0,0,0,0.125);
+  background: hsla(45, 46%, 95%, .6);
+  box-shadow: 1px 1px 2px rgba(0, 0, 0, 0.125);
   word-wrap: break-word;
   box-sizing: border-box;
   position: fixed;
@@ -41,16 +41,17 @@ $toc-max-sreen-width: 2 * 200px + $post-toc-margin-left !default;
         display: none;
       }
 
-      .has-active > ul {
+      .has-active>ul {
         display: block;
       }
     }
 
     .toc-link.active {
-      color: $main-colour;
+      color: $link-hover-colour;
     }
   }
 }
+
 @include max-screen($toc-max-sreen-width) {
   .post-toc {
     display: none;
