--- a/themes/even/sass/site.scss
+++ b/themes/even/sass/site.scss
@@ -11,6 +11,8 @@ $theme-color-map: (
 // TODO: allow to change that
 $main-colour: #c05b4d;
 $secondary-colour: #f8f5ec;
+$link-colour: darken($main-colour, 20%);
+$link-hover-colour: darken($main-colour, 30%);
 $body-width: 800px;
 $mobile-navbar-height: 50px !default;
 $code-colour: #c7254e;
